LPS-136691 Fill in some API gaps for user account roles
