# modules/apps/headless/headless-admin-user/headless-admin-user-impl/src/main/java/com/liferay/headless/admin/user/internal/resource/v1_0/UserAccountResourceImpl.java
@@ -114,6 +114,22 @@ public class UserAccountResourceImpl
 	extends BaseUserAccountResourceImpl implements NestedFieldSupport {
 
 	@Override
+	public void
+			deleteAccountByExternalReferenceCodeAccountExternalReferenceCodeUserAccountByExternalReferenceCodeUserAccountExternalReferenceCode(
+				String accountExternalReferenceCode,
+				String userAccountExternalReferenceCode)
+		throws Exception {
+
+		User user = _userLocalService.getUserByExternalReferenceCode(
+			contextCompany.getCompanyId(), userAccountExternalReferenceCode);
+
+		_accountEntryUserRelService.deleteAccountEntryUserRelByEmailAddress(
+			_accountResourceDTOConverter.getAccountEntryId(
+				accountExternalReferenceCode),
+			user.getEmailAddress());
+	}
+
+	@Override
 	public void deleteAccountUserAccountByEmailAddress(
 			Long accountId, String emailAddress)
 		throws Exception {
@@ -351,6 +367,29 @@ public class UserAccountResourceImpl
 					BooleanClauseOccur.MUST_NOT);
 			},
 			filter, search, pagination, sorts);
+	}
+
+	@Override
+	public void
+			postAccountByExternalReferenceCodeAccountExternalReferenceCodeUserAccountByExternalReferenceCodeUserAccountExternalReferenceCode(
+				String accountExternalReferenceCode,
+				String userAccountExternalReferenceCode)
+		throws Exception {
+
+		User user = _userLocalService.getUserByExternalReferenceCode(
+			contextCompany.getCompanyId(), userAccountExternalReferenceCode);
+
+		ServiceContext serviceContext = new ServiceContext();
+
+		serviceContext.setCompanyId(contextCompany.getCompanyId());
+		serviceContext.setLanguageId(
+			contextAcceptLanguage.getPreferredLanguageId());
+		serviceContext.setUserId(contextUser.getUserId());
+
+		_accountEntryUserRelService.addAccountEntryUserRelByEmailAddress(
+			_accountResourceDTOConverter.getAccountEntryId(
+				accountExternalReferenceCode),
+			user.getEmailAddress(), new long[0], null, serviceContext);
 	}
 
 	@Override
